crates/bityzba/tests/ui/fail/enum_duplicate_variant_invariant.rs
use bityzba::invariant;

#[invariant(::Named => true)]
#[invariant(::Named => !name.is_empty())]
enum Choice {
    Named { name: String },
}

fn main() {}
