crates/bityzba/tests/ui/fail/enum_duplicate_variant_invariant.stderr
error: duplicate invariant for enum variant `Named`
 --> tests/ui/fail/enum_duplicate_variant_invariant.rs:4:15
  |
4 | #[invariant(::Named => !name.is_empty())]
  |               ^^^^^
